Fix value attribute and add attribute disabled in input, add text align in cartCounter class

--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -61,6 +61,7 @@
         top: 50%;
         right: 0;
         transform: translate(50%, -50%);
+        text-align: center;
       }
 
       &:hover {
